[package]
name = "wgpu-surface"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
pollster = "0.3.0"
# wgpu = { path = "../wgpu/wgpu" }
# wgpu = { git = "https://github.com/gfx-rs/wgpu.git", rev = "583cc6ab04796b8ab29a84920ff5bd42d9736e7a" }
wgpu = { git = "https://github.com/Elabajaba/wgpu.git", branch = "surface_dedup" }
winit = "0.29.0"
